--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       padding: 14px 25px;
       font-size: 18px;
       color: white;
-      background-color: #111;
+      background-color: #d14e83;
       text-decoration: none;
       border-radius: 8px;
       width: 80%;
@@ -45,13 +45,13 @@
       transition: background-color 0.3s ease;
     }
     a.button:hover {
-      background-color: #333;
+      background-color: #b94071;
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <img class="profile-pic" src="https://instagram.falg5-1.fna.fbcdn.net/v/t51.2885-19/432984217_1819272115161725_2553522461914433066_n.jpg?stp=dst-jpg_s320x320&_nc_ht=instagram.falg5-1.fna.fbcdn.net&_nc_cat=111&_nc_ohc=YcWBvhLn9oYQ7kNvgGaqOZ2&edm=AEQ6tj4BAAAA&ccb=7-5&oh=00_AYAqRfJpJ3y7q3PH2gDG9pS2V9EY_3ompoGb2o1V2YlPoA&oe=666AAA63&_nc_sid=10d13b" alt="Safinity Nails Profile Picture">
+    <img class="profile-pic" src="https://p16-sign-va.tiktokcdn.com/tos-maliva-avt-0068/31b6fe07fe9110f63d416cfdd552b3e2~c5_100x100.jpeg?x-expires=1717608000&x-signature=Xp0oknThOwDRUrSTVG6V%2FkKzre4%3D" alt="Safinity Nails TikTok Profile Picture">
     
     <h1>Safinity Nails</h1>
     
