--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 </head>
 <body>
   <div class="container">
-    <img class="profile-pic" src="https://p16-sign-va.tiktokcdn.com/tos-maliva-avt-0068/31b6fe07fe9110f63d416cfdd552b3e2~c5_100x100.jpeg?x-expires=1717608000&x-signature=Xp0oknThOwDRUrSTVG6V%2FkKzre4%3D" alt="Safinity Nails TikTok Profile Picture">
+    <img class="profile-pic" src="https://p16-sign-va.tiktokcdn.com/tos-maliva-avt-0068/6b1e27fce2e82313525c6ecd6fcd163a~tplv-tiktokx-cropcenter:1080:1080.jpeg?dr=14579&refresh_token=37e80bb6&x-expires=1749207600&x-signature=srjDeCeRswoq%2FoQVsv5dC2DeKzw%3D&t=4d5b0474&ps=13740610&shp=a5d48078&shcp=81f88b70&idc=maliva">
     
     <h1>Safinity Nails</h1>
     
