--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     h1 {
       font-size: 28px;
       margin-bottom: 25px;
+      color: white; /* Updated title color */
     }
     a.button {
       display: block;
